# training-materials

./: README.md
projs/agent-foundrylocal/: pyproject.toml
projs/agent-foundrylocal/src/agent_foundrylocal/: main.py
projs/agent-foundrylocal/src/chains/: compliance_check.py  import mlflow.py  info_extraction.py
projs/agent-foundrylocal/src/configs/: llms.py
projs/agent-foundrylocal/src/data/: example_sprint.py
projs/agent-foundrylocal/src/graph/: sprint_status_extraction.py
projs/mlflow-appinsights/: README.md  main.py  pyproject.toml
scripts/foundry-local/: README.md  phi4-mini.py
